--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,11 +8,15 @@
 </head>
 
 <body>
-    <div class="header">
+    <!--navigation-->
+    <header >
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <nav>
+            <!--Unordered List element-->
             <ul>
+                <!--List item element-->
                 <li>
+                    <!--Anchor element-->
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
                 <li>
@@ -22,8 +26,8 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
     <div class="hero"></div>
     <div class="content">
         <div class="search-engine-optimization">
