--- a/Develop/index.html
+++ b/Develop/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <!--navigation-->
+    <!--Header and navigation-->
     <header >
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -78,13 +78,13 @@
             </p>
         </section>
     </aside>
-    
-    <div class="footer">
-        <h2>Made with ❤️️ by Horiseon</h2>
+    <!--footer-->
+    <footer class="footer">
+        <h4>Made with ❤️️ by Horiseon</h4>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
